force-app/main/default/objects/Resume_Entry__c/Resume_Entry__c.object-meta.xml
<CustomObject>
    <label>Resume Entry</label>
    <nameField>
        <label>Resume Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resume Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>