force-app/main/default/objects/Resume_Entry__c/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <description>Name of the Static Resource in the /resume folder</description>
    <inlineHelpText>Name of the Static Resource in the /resume folder</inlineHelpText>
    <label>Logo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>