force-app/main/default/objects/Resume_Entry__c/fields/Resume__c.field-meta.xml
<CustomField>
    <fullName>Resume__c</fullName>
    <label>Resume</label>
    <referenceTo>Resume__c</referenceTo>
    <relationshipLabel>Resume Entries</relationshipLabel>
    <relationshipName>Resume_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>