force-app/main/default/objects/Resume_Entry__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <label>Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Aura</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>Azure</fullName>
            </value>
            <value>
                <fullName>BitBucket</fullName>
            </value>
            <value>
                <fullName>GCP</fullName>
            </value>
            <value>
                <fullName>GitHub</fullName>
            </value>
            <value>
                <fullName>GitLab</fullName>
            </value>
            <value>
                <fullName>Heroku</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>JavaScript</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>Scratch Orgs</fullName>
            </value>
            <value>
                <fullName>SFDX</fullName>
            </value>
            <value>
                <fullName>SOQL</fullName>
            </value>
            <value>
                <fullName>TypeScript</fullName>
            </value>
            <value>
                <fullName>Visualforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>