force-app/main/default/objects/Resume_Entry__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Job</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>